--- a/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
@@ -81,6 +81,12 @@ rules:
   - list
   - watch
 - apiGroups:
+  - storage.k8s.io
+  resources:
+  - storageclasses
+  verbs:
+  - get
+- apiGroups:
   - authentication.k8s.io
   resources:
   - tokenreviews
