--- a/apps/base/logging-elasticsearch/deploy/elasticsearch/statefulSet.yaml
+++ b/apps/base/logging-elasticsearch/deploy/elasticsearch/statefulSet.yaml
@@ -53,10 +53,10 @@ spec:
         resources:
           requests:
             cpu: 250m
-            memory: 1Gi
+            memory: 1280Mi
           limits:
             cpu: 750m
-            memory: 1Gi
+            memory: 1280Mi
         volumeMounts:
         - name: cluster-config
           mountPath: /etc/localtime
