--- a/apps/vagrant/logging-elasticsearch/deploy/elasticsearch-statefulSet-resources.yaml
+++ b/apps/vagrant/logging-elasticsearch/deploy/elasticsearch-statefulSet-resources.yaml
@@ -11,7 +11,7 @@ spec:
         resources:
           requests:
             cpu: 250m
-            memory: 1Gi
+            memory: 1280Mi
           limits:
             cpu: 750m
-            memory: 1Gi
+            memory: 1280Mi
