--- a/ansible/install_applications/roles/app_base/tasks/deploy-manual.yml
+++ b/ansible/install_applications/roles/app_base/tasks/deploy-manual.yml
@@ -32,7 +32,7 @@
 
 - name: "Deploy {{ app_name }} manually"
   kubernetes.core.k8s:
-    definition: "{{ lookup('ansible.builtin.pipe', 'SOPS_AGE_KEY_FILE={{ sops_age_key_file }} kustomize build --enable-alpha-plugins --enable-exec ' + local_kustomization_dir.path + '/overlay') }}"
+    definition: "{{ lookup('ansible.builtin.pipe', 'SOPS_AGE_KEY_FILE=' + sops_age_key_file + ' kustomize build --enable-alpha-plugins --enable-exec ' + local_kustomization_dir.path + '/overlay') }}"
     state: present
     kubeconfig: "{{ kubeconfig_path }}"
     context: "{{ kubeconfig_context }}"
