--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-docker-registry.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-docker-registry.yaml
@@ -7,8 +7,7 @@ watchers:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
       - latest
-      - .*beta.*
-      - .*-rc\.[0-9]+
+      - .*(alpha|beta|rc).*
       - ^[0-1]\.
       - ^2\.[0-7]\.
       - ^2\.8\.[0-2]$
