--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-reloader.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-reloader.yaml
@@ -2,13 +2,11 @@ watchers:
   - type: docker_registry
     repo: ghcr.io
     image: stakater/reloader
-    tag: v1.0.52
+    tag: v1.0.60
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
-      - .*SNAPSHOT.*
-      - ^PR-.*
-      - dev
+      - .*(PR-|SNAPSHOT|dev|-ubi|-UBI).*
       - v0\.
       - v1\.0\.[0-9]$
-      - v1\.0\.[0-4][0-9]$
+      - v1\.0\.[0-5][0-9]$
