--- a/apps/base/download-sickchill/deploy/statefulSet.yaml
+++ b/apps/base/download-sickchill/deploy/statefulSet.yaml
@@ -24,7 +24,7 @@ spec:
           type: RuntimeDefault
       initContainers:
       - name: create-folders
-        image: "registry.lan/sickchill:2023.6.27-3.11.6-slim-bookworm"
+        image: "registry.lan/sickchill:2024.1.8.post1-3.11.7-slim-bookworm"
         imagePullPolicy: IfNotPresent
         command:
           - "sh"
@@ -42,7 +42,7 @@ spec:
           mountPath: /data/sickchill
       containers:
       - name: sickchill
-        image: "registry.lan/sickchill:2023.6.27-3.11.6-slim-bookworm"
+        image: "registry.lan/sickchill:2024.1.8.post1-3.11.7-slim-bookworm"
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8081
