--- a/apps/base/logging-fluentbit/deploy/daemonSet.yaml
+++ b/apps/base/logging-fluentbit/deploy/daemonSet.yaml
@@ -35,7 +35,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: fluent-bit
-        image: "registry.lan/fluent-bit:2.2.0"
+        image: "registry.lan/fluent-bit:2.2.1-amd64"
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 2020
