--- a/apps/base/logging-fluentbit/deploy/kustomization.yaml
+++ b/apps/base/logging-fluentbit/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: fluent-bit
       app.kubernetes.io/component: fluent-bit
-      app.kubernetes.io/version: 2.2.0
+      app.kubernetes.io/version: 2.2.1-amd64
 
 generatorOptions:
  disableNameSuffixHash: true
