--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-logging-fluentbit.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-logging-fluentbit.yaml
@@ -2,9 +2,9 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: fluent/fluent-bit
-    tag: 2.2.0
+    tag: 2.2.1-amd64
     includes:
-      - "[1-9]\\.[0-9]+\\.[0-9].*"
+      - "[0-9]+\\.[0-9]+\\.[0-9]+-amd64"
     excludes:
       - .*debug.*
       - .*rc.*
