--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-homepage.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-homepage.yaml
@@ -2,9 +2,9 @@ watchers:
   - name: Homepage
     type: docker_registry
     repo: ghcr.io
-    image: benphelps/homepage
-    tag: v0.7.1
+    image: ghcr.io/gethomepage/homepage
+    tag: v0.8.4
     includes:
       - ^v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
-      - ^v0\.[0-6]\.
+      - ^v0\.[0-7]\.
