--- a/apps/base/dev-argo-events/deploy/manifests/base/controller-manager/controller-config.yaml
+++ b/apps/base/dev-argo-events/deploy/manifests/base/controller-manager/controller-config.yaml
@@ -28,9 +28,9 @@ data:
           duplicates: 300s
         versions:
         - version: latest
-          natsImage: nats:2.9.16
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+          natsImage: nats:2.10.10
+          metricsExporterImage: natsio/prometheus-nats-exporter:0.14.0
+          configReloaderImage: natsio/nats-server-config-reloader:0.14.0
           startCommand: /nats-server
         - version: 2.8.1
           natsImage: nats:2.8.1
@@ -66,4 +66,9 @@ data:
           natsImage: nats:2.9.16
           metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
           configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+          startCommand: /nats-server
+        - version: 2.10.10
+          natsImage: nats:2.10.10
+          metricsExporterImage: natsio/prometheus-nats-exporter:0.14.0
+          configReloaderImage: natsio/nats-server-config-reloader:0.14.0
           startCommand: /nats-server
