--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
@@ -3,20 +3,22 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: miniflux/miniflux
-    tag: 2.1.3-distroless
+    tag: 2.1.4-distroless
     includes:
       - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
       - ^1\..*
       - ^2\.0\..*-distroless$
-      - ^2\.1\.[0-2]-distroless$
+      - ^2\.1\.[0-3]-distroless$
   - name: Miniflux PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.7-alpine3.20
+    tag: 15.8-alpine3.20
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+      # TODO upgrade major version
+      - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
       - ^[0-9]\..*
@@ -26,14 +28,14 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 22.2.0-alpine3.20
+    tag: 22.6.0-alpine3.20
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*-alpine3.1[0-9]
       - 1[0-9]\..*
       - 2[0-1]\..*
-      - 22\.[0-1]\..*
+      - 22\.[0-5]\..*
   - name: "Reminiflux Nginx"
     type: docker_registry
     repo: registry-1.docker.io
