--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
@@ -3,32 +3,34 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: paperless-ngx/paperless-ngx
-    tag: 2.9.0
+    tag: 2.11.4
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - .*(beta|rc).*
       - ^[0-1]\..*
-      - ^2\.[0-8]\..*
+      - ^2\.[0-9]\..*
+      - ^2\.1[0]\..*
   - name: "Paperless Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.2.5-alpine3.20
+    tag: 7.4.0-alpine3.20
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
       - ^[0-6]\.
-      - ^7\.[0-1]\.
-      - ^7\.2\.[0-4]-
+      - ^7\.[0-3]\.
   - name: Paperless PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.7-alpine3.20
+    tag: 15.8-alpine3.20
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+      # TODO upgrade major version
+      - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
       - ^[0-9]\..*
