--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-gitea.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-gitea.yaml
@@ -2,26 +2,28 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: gitea/gitea
-    tag: 1.22.3-rootless
+    tag: 1.23.6-rootless
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-rootless
     excludes:
       - ^0\.
       - ^1\.[0-9]\.
       - ^1\.1[0-9]\.
-      - ^1\.2[0-1]\.
-      - ^1\.22\.[0-2]-
+      - ^1\.2[0-2]\.
+      - ^1\.23\.[0-5]-
   - name: Gitea PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.8-alpine3.20
+    tag: 15.12-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
       # TODO upgrade major version
       - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
+      - .*-alpine3\.2[0]
       - ^[0-9]\.
       - ^1[0-4]\.
-      - ^15\.[0-6]\.
+      - ^15\.[0-9]\.
+      - ^15\.1[0-1]\.
