--- a/apps/base/home-homeassistant/deploy/mysql/kustomization.yaml
+++ b/apps/base/home-homeassistant/deploy/mysql/kustomization.yaml
@@ -6,7 +6,7 @@ labels:
     pairs:
       app.kubernetes.io/name: homeassistant
       app.kubernetes.io/component: mysql
-      app.kubernetes.io/version: 8.0.40-debian
+      app.kubernetes.io/version: 8.4.4-oraclelinux9
 
 secretGenerator:
 - name: mysql-env
