--- a/apps/base/home-homeassistant/deploy/mysql/statefulSet.yaml
+++ b/apps/base/home-homeassistant/deploy/mysql/statefulSet.yaml
@@ -22,7 +22,7 @@ spec:
           type: RuntimeDefault
       initContainers:
       - name: create-folders
-        image: "registry.lan/homeassistant-mysql:8.0.40-debian"
+        image: "registry.lan/homeassistant-mysql:8.4.4-oraclelinux9"
         imagePullPolicy: IfNotPresent
         command:
           - "sh"
@@ -41,7 +41,7 @@ spec:
           mountPath: /mysql-data
       containers:
       - name: mysql
-        image: "registry.lan/homeassistant-mysql:8.0.40-debian"
+        image: "registry.lan/homeassistant-mysql:8.4.4-oraclelinux9"
         imagePullPolicy: IfNotPresent
         envFrom:
         - secretRef:
