--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-blocky.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-blocky.yaml
@@ -2,35 +2,39 @@ watchers:
   - type: docker_registry
     repo: ghcr.io
     image: 0xerr0r/blocky
-    tag: v0.24
+    tag: v0.25
     includes:
       - 'v[0-9]+\.[0-9]+'
     excludes:
       - v0\.[0-9]$
       - v0\.1[0-9]$
-      - v0\.2[0-3]$
+      - v0\.2[0-4]$
   - name: Blocky PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.8-alpine3.20
+    tag: 15.12-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
       # TODO upgrade major version
       - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
-      - ^[0-9]\..*
-      - ^1[0-4]\..*
-      - ^15\.[0-6]\..*
+      - .*-alpine3\.2[0]
+      - ^[0-9]\.
+      - ^1[0-4]\.
+      - ^15\.[0-9]\.
+      - ^15\.1[0-1]\.
   - name: "Blocky Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.4.0-alpine3.20
+    tag: 7.4.2-alpine3.21
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
+      - .*alpine3\.2[0]
       - ^[0-6]\.
       - ^7\.[0-3]\.
+      - ^7\.4\.[0-1]\.
