--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
@@ -2,7 +2,7 @@ watchers:
   - name: ZoneMTA
     type: github_tag
     repo: zone-eu/zone-mta
-    tag: v3.10.2
+    tag: v3.10.8
     includes:
       - ^v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
@@ -11,20 +11,19 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.4.2-alpine3.21
+    tag: 8.2.3-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
-      - .*alpine3\.2[0]
-      - ^[0-6]\.
-      - ^7\.[0-3]\.
-      - ^7\.4\.[0-1]\.
+      - .*alpine3\.2[0-1]
+      - ^[0-7]\.
+      - ^8\.[0-1]\.
   - name: "ZoneMTA Mongo"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mongo
-    tag: 8.0.13-noble
+    tag: 8.2.1-noble
     includes:
       - '[0-9]+\.[0-9]+.[0-9]+-.*'
     excludes:
@@ -32,13 +31,13 @@ watchers:
       - .*-(nanoserver|windowsservercore).*$
       - .*-focal$
       - ^[0-7]\..*
-      - ^8\.0\.[0-9]-.*
-      - ^8\.0\.1[0-2]-.*
+      - ^8\.[0-1]\..*
+      - ^8\.2\.[0]-.*
   - name: "ZoneMTA Node"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 23.11.1-alpine3.22
+    tag: 25.2.0-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
