--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
@@ -3,14 +3,14 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: miniflux/miniflux
-    tag: 2.2.12-distroless
+    tag: 2.2.14-distroless
     includes:
       - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
       - ^1\..*
       - ^2\.[0-1]\..*-distroless$
       - ^2\.2\.[0-9]-distroless$
-      - ^2\.2\.1[0-1]-distroless$
+      - ^2\.2\.1[0-3]-distroless$
   - name: Miniflux PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
@@ -31,27 +31,27 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 24.6.0-alpine3.22
+    tag: 25.1.0-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*-alpine3.1[0-9]
       - .*-alpine3.2[0]
       - 1[0-9]\..*
-      - 2[0-3]\..*
-      - 24\.[0-5]\..*
+      - 2[0-4]\..*
+      - 25\.[0]\..*
   - name: "Reminiflux Nginx"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/nginx
-    tag: 1.27.4-alpine3.21-slim
+    tag: 1.29.3-alpine3.22-slim
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]-slim
     excludes:
       - .*-alpine3.1[0-9]
-      - .*-alpine3.2[0]
+      - .*-alpine3.2[0-1]
       - .*-perl
       - 1\.[0-9]\..*
       - 1\.[0-1][0-9]\..*
-      - 1\.2[0-6]\..*
-      - 1\.27\.[0-3]-
+      - 1\.2[0-8]\..*
+      - 1\.29\.[0-2]-
