--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-nextcloud.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-nextcloud.yaml
@@ -3,36 +3,35 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/nextcloud
-    tag: 31.0.8-apache
+    tag: 32.0.1-apache
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-apache
     excludes:
       - ^[0-9]\..*
       - ^1[0-9]\..*
       - ^2[0-9]\..*
-      - ^3[0]\..*
-      - ^31\.0\.[0-7]-.*
+      - ^3[0-1]\..*
   - name: Nextcloud supercronic
     type: github_release
     repo: aptible/supercronic
-    release: v0.2.34
+    release: v0.2.39
     excludes:
       - .*(alpha|beta|rc).*
       - ^v0\.[0-1]\.
   - name: Nextcloud Calendar
     type: github_release
     repo: nextcloud-releases/calendar
-    release: v5.3.9
-    excludes:
-      - .*(alpha|beta|rc).*
-      - ^v[0-4]\..*
-  - name: Nextcloud Contacts
-    type: github_release
-    repo: nextcloud-releases/contacts
-    release: v7.2.5
+    release: v6.0.4
     excludes:
       - .*(alpha|beta|rc).*
       - ^v[0-5]\..*
+  - name: Nextcloud Contacts
+    type: github_release
+    repo: nextcloud-releases/contacts
+    release: v8.0.6
+    excludes:
+      - .*(alpha|beta|rc).*
+      - ^v[0-7]\..*
   - name: Nextcloud Notes
     type: github_release
     repo: nextcloud/notes
@@ -43,38 +42,39 @@ watchers:
   - name: Nextcloud Tasks
     type: github_release
     repo: nextcloud/tasks
-    release: v0.16.1
+    release: v0.17.1
     excludes:
       - .*(alpha|beta|rc).*
       - ^v0\.[0-9]\..*
-      - ^v0\.1[0-5]\..*
+      - ^v0\.1[0-6]\..*
   - name: "Nextcloud MySQL"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mysql
-    tag: 9.4.0-oraclelinux9
+    tag: 9.5.0-oraclelinux9
     includes:
       - ^[0-9]\.[0-9]+\.[0-9]+-oraclelinux.+
     excludes:
       - .*rc.*
       - ^[0-8]\..*
-      - ^9\.[0-3]\..*
+      - ^9\.[0-4]\..*
   - name: "Nextcloud Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 8.0.3-alpine3.21
+    tag: 8.2.3-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
-      - .*alpine3\.2[0]
+      - .*alpine3\.2[0-1]
       - ^[0-7]\.
+      - ^8\.[0-1]\.
   - name: "Caldav recurring task scheduler base image"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.5-alpine3.22
+    tag: 3.13.9-alpine3.22
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
@@ -82,7 +82,7 @@ watchers:
       - .*alpine3\.2[0-1]
       - ^3\.[0-9]\.
       - ^3\.1[0-2]\.
-      - ^3\.13\.[0-4]-
+      - ^3\.13\.[0-8]-
   - name: Caldav recurring task scheduler
     type: github_commit
     repo: Neraud/caldav-recurring-task-scheduler
