--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
@@ -3,25 +3,26 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: paperless-ngx/paperless-ngx
-    tag: 2.18.2
+    tag: 2.19.5
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - .*(beta|rc).*
       - ^[0-1]\..*
       - ^2\.[0-9]\..*
-      - ^2\.1[0-7]\..*
+      - ^2\.1[0-8]\..*
   - name: "Paperless Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 8.0.3-alpine3.21
+    tag: 8.2.3-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
-      - .*alpine3\.2[0]
+      - .*alpine3\.2[0-1]
       - ^[0-7]\.
+      - ^8\.[0-1]\.
   - name: Paperless PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
